--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,27 @@
+:root {
+  /* FONTS */
+  --font-size-h1: 4rem;
+  --font-size-h2: 3rem;
+  --font-size-h3: 2.5rem;
+  --font-size-h4: 2rem;
+  --font-size-h5: 1.5rem;
+  --font-size-h6: 1.25rem;
+  --font-size-body: 1rem;
+  --font-size-caption: 0.75rem;
+
+  /* SIZING SCALE */
+  --size-xxl: 3rem;
+  --size-xl: 2rem;
+  --size-l: 1.5rem;
+  --size-m: 1rem;
+  --size-s: 0.75rem;
+  --size-xs: 0.5rem;
+  --size-xxs: 0.25rem;
+
+  /* BORDER-RADIUS */
+  --border-radius-m: 1rem;
+}
+
 html,
 body {
   padding: 0;
@@ -9,6 +33,12 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+button {
+  background: none;
+  border: none;
+  padding: 0;
 }
 
 * {
