Timer app with new page

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,27 +19,16 @@
 .timer {
   font-size: var(--font-size-h1);
   font-variant-numeric: tabular-nums;
+  padding-bottom: var(--size-xl);
 }
 
-.button {
-  font-size: var(--font-size-h4);
-  padding: var(--size-m) var(--size-xl);
-  border-radius: var(--border-radius-m);
-  border: 2px solid black;
+.finishedText {
+  font-size: var(--font-size-h3);
+  padding-bottom: var(--size-xl);
 }
 
-.button:disabled {
-  border-color: #555;
-  background: #eee;
-  color: #777;
-  cursor: not-allowed;
-}
-
-.button:hover {
-  cursor: pointer;
-}
-
-.button:focus {
-  outline: none;
-  box-shadow: 0 0 0 2px rebeccapurple;
+.createNew {
+  position: fixed;
+  bottom: var(--size-l);
+  right: var(--size-l);
 }
